@@ -1,4 +1,4 @@
-package com.rh.api_gateway.config;
+package com.rh.api_gateway.config.security;
 
 import com.rh.api_gateway.services.PermissionService;
 import com.rh.common.HeaderConstants;
@@ -17,31 +17,36 @@ import java.util.Collections;
 @Component
 public class AuthenticationFilter implements WebFilter {
 
-    private final PermissionService permissaoService;
+    private final PermissionService permissionService;
 
-    public AuthenticationFilter(PermissionService permissaoService) {
-        this.permissaoService = permissaoService;
+    public AuthenticationFilter(PermissionService permissionService) {
+        this.permissionService = permissionService;
     }
 
     @Override
     public Mono<Void> filter(ServerWebExchange exchange, WebFilterChain chain) {
         String path = exchange.getRequest().getURI().getPath();
 
-        // Permitir rotas públicas
-        if (path.contains("/auth/") || path.contains("/eureka")) {
-            return chain.filter(exchange);
-        }
+//        if ()
+//        // Permitir rotas públicas
+//        if (path.contains("/auth/") || path.contains("/eureka")) {
+//            return chain.filter(exchange);
+//        }
 
         // Simular header de usuário conforme especificação
         String usuarioHeader = exchange.getRequest().getHeaders().getFirst(HeaderConstants.USER_ID);
 
-        if (usuarioHeader == null || usuarioHeader.trim().isEmpty()) {
-            exchange.getResponse().setStatusCode(org.springframework.http.HttpStatus.UNAUTHORIZED);
-            return exchange.getResponse().setComplete();
+        if (usuarioHeader == null || usuarioHeader.isBlank()) {
+            return chain.filter(exchange);
         }
 
+//        if (usuarioHeader == null || usuarioHeader.trim().isEmpty()) {
+//            exchange.getResponse().setStatusCode(org.springframework.http.HttpStatus.UNAUTHORIZED);
+//            return exchange.getResponse().setComplete();
+//        }
+
         // Buscar dados do usuário no cache/serviço
-        return permissaoService.getUserPermission(usuarioHeader)
+        return permissionService.getUserPermission(usuarioHeader)
                 .flatMap(userInfo -> {
                     if (userInfo == null) {
                         exchange.getResponse().setStatusCode(org.springframework.http.HttpStatus.UNAUTHORIZED);
